tests/files/flow_controller_tests/should_run/074.cmdr
x = 28.5;
print csc(x);