tests/files/flow_controller_tests/should_fail/051.cmdr
x = false;
print csc(x);